--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.8.6",
-    "gulp-slim": "0.0.8",
-    "win-spawn": "^2.0.0",
     "gulp-rimraf": "^0.1.0",
-    "rimraf": "^2.2.8"
+    "gulp-sass": "^0.7.2",
+    "gulp-slim": "0.0.8",
+    "rimraf": "^2.2.8",
+    "win-spawn": "^2.0.0"
   }
 }
