Add coffee plugin

--- a/package.json
+++ b/package.json
@@ -7,9 +7,11 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.8.6",
+    "gulp-coffee": "^2.1.1",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-slim": "0.0.8",
+    "gulp-util": "^2.2.20",
     "rimraf": "^2.2.8",
     "win-spawn": "^2.0.0"
   }
