--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "license": "MIT",
   "devDependencies": {
     "gulp": "^3.8.6",
+    "gulp-bower": "0.0.6",
     "gulp-coffee": "^2.1.1",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
