--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp": "^3.8.6",
     "gulp-bower": "0.0.6",
     "gulp-coffee": "^2.1.1",
+    "gulp-connect": "^2.0.6",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-slim": "0.0.8",
