Update gulpfile, add run-sequence plugin

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-sass": "^0.7.2",
     "gulp-slim": "0.0.8",
     "gulp-util": "^2.2.20",
+    "run-sequence": "^0.3.6",
     "win-spawn": "^2.0.0"
   }
 }
