--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "devDependencies": {
     "gulp": "^3.8.6",
     "gulp-bower": "0.0.6",
+    "gulp-concat": "^2.3.3",
     "gulp-connect": "^2.0.6",
+    "gulp-minify-css": "^0.3.6",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-slim": "0.0.8",
