--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "gulp-concat": "^2.3.3",
     "gulp-connect": "^2.0.6",
     "gulp-minify-css": "^0.3.6",
+    "gulp-minify-html": "^0.1.4",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-slim": "0.0.8",
+    "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.20",
     "run-sequence": "^0.3.6",
     "win-spawn": "^2.0.0"
