--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-minify-html": "^0.1.4",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
+    "gulp-shell": "^0.2.8",
     "gulp-slim": "0.0.8",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^2.2.20",
