--- a/bower.json
+++ b/bower.json
@@ -8,7 +8,8 @@
   "dependencies": {
     "angular": "1.2.x",
     "angular-route": "1.2.x",
-    "html5-boilerplate": "~4.3.0",
-    "bootstrap": "~3.2.0"
+    "angular-loader": "1.2.x",
+    "angular-mocks": "~1.2.x",
+    "html5-boilerplate": "~4.3.0"
   }
 }
