--- a/package.json
+++ b/package.json
@@ -19,6 +19,25 @@
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
     "run-sequence": "^0.3.6",
-    "win-spawn": "^2.0.0"
+    "win-spawn": "^2.0.0",
+    "karma": "^0.12.19",
+    "karma-chrome-launcher": "^0.1.4",
+    "karma-coverage": "^0.2.5",
+    "karma-jasmine": "^0.2.2",
+    "karma-junit-reporter": "^0.2.2",
+    "karma-phantomjs-launcher": "^0.1.4"
+  },
+  "scripts": {
+    "start": "http-server -a localhost -p 8000",
+
+    "pretest": "npm install",
+    "test": "karma start test/karma.conf.js",
+    "test-single-run": "karma start test/karma.conf.js  --single-run",
+
+    "preupdate-webdriver": "npm install",
+    "update-webdriver": "webdriver-manager update",
+
+    "preprotractor": "npm run update-webdriver",
+    "protractor": "protractor test/protractor-conf.js"
   }
 }
