--- a/package.json
+++ b/package.json
@@ -18,26 +18,27 @@
     "gulp-slim": "0.0.8",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
-    "run-sequence": "^0.3.6",
-    "win-spawn": "^2.0.0",
+    "http-server": "^0.6.1",
     "karma": "^0.12.19",
     "karma-chrome-launcher": "^0.1.4",
     "karma-coverage": "^0.2.5",
     "karma-jasmine": "^0.2.2",
     "karma-junit-reporter": "^0.2.2",
-    "karma-phantomjs-launcher": "^0.1.4"
+    "karma-phantomjs-launcher": "^0.1.4",
+    "protractor": "~0.20.1",
+    "run-sequence": "^0.3.6",
+    "shelljs": "^0.2.6",
+    "win-spawn": "^2.0.0"
   },
   "scripts": {
     "start": "http-server -a localhost -p 8000",
-
     "pretest": "npm install",
     "test": "karma start test/karma.conf.js",
     "test-single-run": "karma start test/karma.conf.js  --single-run",
-
     "preupdate-webdriver": "npm install",
     "update-webdriver": "webdriver-manager update",
-
     "preprotractor": "npm run update-webdriver",
-    "protractor": "protractor test/protractor-conf.js"
+    "protractor": "protractor test/protractor-conf.js",
+    "update-index-async": "node -e \"require('shelljs/global'); sed('-i', /\\/\\/@@NG_LOADER_START@@[\\s\\S]*\\/\\/@@NG_LOADER_END@@/, '//@@NG_LOADER_START@@\\n' + cat('www/js/angular-loader.min.js') + '\\n//@@NG_LOADER_END@@', 'www/index-async.html');\""
   }
 }
