--- a/package.json
+++ b/package.json
@@ -8,8 +8,10 @@
   "devDependencies": {
     "gulp": "^3.8.6",
     "gulp-bower": "0.0.6",
+    "gulp-clean": "^0.3.1",
     "gulp-concat": "^2.3.3",
     "gulp-connect": "^2.0.6",
+    "gulp-jshint": "^1.8.3",
     "gulp-minify-css": "^0.3.6",
     "gulp-minify-html": "^0.1.4",
     "gulp-sass": "^0.7.2",
@@ -22,11 +24,10 @@
     "karma-coverage": "^0.2.5",
     "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
+    "lodash": "^2.4.1",
     "protractor": "~0.20.1",
-    "win-spawn": "^2.0.0",
     "run-sequence": "^0.3.6",
-    "gulp-clean": "^0.3.1",
-    "lodash": "^2.4.1"
+    "win-spawn": "^2.0.0"
   },
   "scripts": {
     "test": "karma start test/karma.conf.js --single-run --browsers PhantomJS"
