--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-jshint": "^1.8.3",
     "gulp-minify-css": "^0.3.6",
     "gulp-minify-html": "^0.1.4",
+    "gulp-protractor": "0.0.11",
     "gulp-sass": "^0.7.2",
     "gulp-shell": "^0.2.8",
     "gulp-slim": "0.0.8",
@@ -27,7 +28,7 @@
     "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^2.4.1",
-    "protractor": "~0.20.1",
+    "protractor": "^1.0.0",
     "run-sequence": "^0.3.6",
     "win-spawn": "^2.0.0"
   },
