--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-minify-css": "^0.3.6",
     "gulp-minify-html": "^0.1.4",
     "gulp-protractor": "0.0.11",
+    "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
     "gulp-shell": "^0.2.8",
     "gulp-slim": "0.0.8",
