--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular-loader": "1.2.x",
     "angular-mocks": "~1.2.x",
     "html5-boilerplate": "~4.3.0",
-    "bootstrap": "~3.2.0"
+    "bootstrap": "~3.2.0",
+    "ionic": "driftyco/ionic-bower#1.0.0-beta.11"
   }
 }
