--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.8.6",
     "gulp-concat": "^2.3.3",
     "gulp-connect": "^2.0.6",
+    "gulp-imagemin": "^1.0.0",
     "gulp-jshint": "^1.8.4",
     "gulp-minify-css": "^0.3.6",
     "gulp-minify-html": "^0.1.4",
@@ -21,6 +22,7 @@
     "gulp-sourcemaps": "^1.1.0",
     "gulp-uglify": "^0.3.1",
     "gulp-util": "^3.0.0",
+    "imagemin-optipng": "^0.1.0",
     "jshint-stylish": "^0.4.0",
     "karma": "^0.12.19",
     "karma-chrome-launcher": "^0.1.4",
