--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "gulp-jshint": "^1.8.4",
     "gulp-minify-css": "^0.3.6",
     "gulp-minify-html": "^0.1.4",
+    "gulp-open": "^0.2.8",
     "gulp-protractor": "0.0.11",
     "gulp-rimraf": "^0.1.0",
     "gulp-sass": "^0.7.2",
