Add require-dir plugin

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^2.4.1",
+    "require-dir": "^0.1.0",
     "run-sequence": "^0.3.6",
     "shelljs": "^0.3.0",
     "win-spawn": "^2.0.0"
