--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gulp": "^3.8.6",
     "gulp-concat": "^2.3.3",
     "gulp-connect": "^2.0.6",
+    "gulp-html-replace": "^1.1.0",
     "gulp-imagemin": "^1.0.0",
     "gulp-jshint": "^1.8.4",
     "gulp-minify-css": "^0.3.7",
