Replace default browser

--- a/gulp/configs/app.json
+++ b/gulp/configs/app.json
@@ -2,7 +2,7 @@
   "dev": {
     "ip": "localhost",
     "port": "9090",
-    "browser": "google-chrome-unstable"
+    "browser": "google-chrome"
   },
   "debug": {
     "ip": "localhost",
