--- a/bower.json
+++ b/bower.json
@@ -6,8 +6,10 @@
   "repository": "https://github.com/AlekseyLeshko/phonegap-seed",
   "license": "MIT",
   "dependencies": {
-    "angular-mocks": "~1.2.x",
-    "ionic": "driftyco/ionic-bower#1.0.0-beta.11",
-    "jquery": "~2.1.1"
+    "angular-mocks": "~1.2.25",
+    "jquery": "~2.1.1",
+    "angular": "~1.2.25",
+    "angular-route": "~1.2.25",
+    "angular-loader": "~1.2.25"
   }
 }
