--- a/config/app.json
+++ b/config/app.json
@@ -7,5 +7,9 @@
   "debug": {
     "ip": "localhost",
     "port": "9091"
-  }
+  },
+  "scripts": [
+    "bower_components/angular/angular.min.js",
+    "bower_components/angular-route/angular-route.min.js"
+  ]
 }
