--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,7 @@
     "jquery": "~2.1.1",
     "angular": "~1.2.25",
     "angular-route": "~1.2.25",
-    "angular-loader": "~1.2.25"
+    "angular-loader": "~1.2.25",
+    "mobile-angular-ui": "~1.1.0-beta.29"
   }
 }
