--- a/bower.json
+++ b/bower.json
@@ -11,6 +11,7 @@
     "angular": "~1.2.25",
     "angular-route": "~1.2.25",
     "angular-loader": "~1.2.25",
-    "mobile-angular-ui": "~1.1.0-beta.29"
+    "mobile-angular-ui": "~1.1.0-beta.29",
+    "angular-translate": "~2.3.0"
   }
 }
