--- a/config/app.json
+++ b/config/app.json
@@ -11,7 +11,8 @@
   "scripts": [
     "bower_components/angular/angular.min.js",
     "bower_components/angular-route/angular-route.min.js",
-    "bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.min.js"
+    "bower_components/mobile-angular-ui/dist/js/mobile-angular-ui.min.js",
+    "bower_components/angular-translate/angular-translate.min.js"
   ],
   "css": [
     "bower_components/mobile-angular-ui/dist/css/mobile-angular-ui-base.min.css"
