--- a/bower.json
+++ b/bower.json
@@ -12,6 +12,7 @@
     "angular-route": "~1.2.25",
     "angular-loader": "~1.2.25",
     "mobile-angular-ui": "~1.1.0-beta.29",
-    "angular-translate": "~2.3.0"
+    "angular-translate": "~2.3.0",
+    "angular-ui-router": "~0.2.11"
   }
 }
