--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "bower": "^1.3.9",
     "gulp": "^3.8.6",
+    "gulp-angular-filesort": "^1.0.4",
     "gulp-concat": "^2.3.3",
     "gulp-connect": "^2.0.6",
     "gulp-html-replace": "^1.1.0",
