--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gulp-connect": "^2.0.6",
     "gulp-html-replace": "^1.1.0",
     "gulp-imagemin": "^1.0.0",
+    "gulp-javascriptobfuscator": "^0.1.1",
     "gulp-jshint": "^1.8.4",
     "gulp-minify-css": "^0.3.7",
     "gulp-minify-html": "^0.1.4",
