--- a/bower.json
+++ b/bower.json
@@ -14,5 +14,15 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular-mocks": "~1.2.25",
+    "jquery": "~2.1.1",
+    "angular": "~1.2.25",
+    "angular-route": "~1.2.25",
+    "angular-loader": "~1.2.25",
+    "mobile-angular-ui": "~1.1.0-beta.29",
+    "angular-translate": "~2.3.0",
+    "angular-ui-router": "~0.2.11"
+  }
 }
