--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "gulp-jshint": "^1.8.5",
     "gulp-minify-css": "^0.3.10",
     "gulp-minify-html": "^0.1.5",
+    "gulp-nice-package": "0.0.2",
     "gulp-open": "^0.2.8",
     "gulp-protractor": "0.0.11",
     "gulp-sass": "^1.0.0",
@@ -60,6 +61,7 @@
     "karma-jasmine": "^0.2.2",
     "karma-phantomjs-launcher": "^0.1.4",
     "lodash": "^2.4.1",
+    "map-stream": "^0.1.0",
     "my-ip": "^1.1.1",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.0",
