--- a/config/app.json
+++ b/config/app.json
@@ -21,5 +21,40 @@
   ],
   "fonts": [
     "bower_components/mobile-angular-ui/dist/fonts/**/*.*"
-  ]
+  ],
+  "config": {
+    "name": "phonegap-seed",
+    "version": "0.0.4",
+    "description": "Phonegap-seed project with angularjs, slim, sass and gulp.",
+    "homepage": "https://github.com/AlekseyLeshko/phonegap-seed",
+    "author": {
+      "name": "Aleksey Leshko",
+      "url": "https://github.com/AlekseyLeshko"
+    },
+    "contributors": [
+      {
+        "name": "Aleksey Leshko",
+        "email": "alekseyleshko@gmail.com"
+      }
+    ],
+    "repository": {
+      "type": "git",
+      "url": "https://github.com/AlekseyLeshko/phonegap-seed"
+    },
+    "bugs": {
+      "url": "https://github.com/AlekseyLeshko/phonegap-seed/issues"
+    },
+    "keywords": [
+      "phonegap-seed",
+      "phonegap",
+      "angularjs",
+      "slim",
+      "sass",
+      "gulp"
+    ],
+    "engines": {
+      "node": "0.10.29"
+    },
+    "license": "MIT"
+  }
 }
