--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
     "gulp"
   ],
   "engines": {
-    "node": "0.10.29",
-    "npm": "1.4.14"
+    "node": "0.10.29"
   },
+  "license": "MIT",
   "dependencies": {},
   "devDependencies": {
     "bower": "^1.3.12",
@@ -63,6 +63,7 @@
     "lodash": "^2.4.1",
     "map-stream": "^0.1.0",
     "my-ip": "^1.1.1",
+    "package-json-validator": "^0.5.6",
     "require-dir": "^0.1.0",
     "run-sequence": "^1.0.0",
     "semver": "^4.0.0",
@@ -74,6 +75,5 @@
   },
   "preferGlobal": false,
   "private": false,
-  "analyze": true,
-  "license": "MIT"
+  "analyze": true
 }
