--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "imagemin-optipng": "^2.0.1",
+    "jasmine-jquery": "^2.0.5",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
