--- a/package.json
+++ b/package.json
@@ -34,26 +34,31 @@
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
+    "angular": "~1.3.0",
+    "angular-mocks": "~1.3.0",
+    "angular-translate": "~2.4.1",
+    "angular-ui-router": "~0.2.11",
     "bower": "^1.3.12",
     "gulp": "^3.8.8",
     "gulp-angular-filesort": "^1.0.4",
     "gulp-concat": "^2.4.1",
     "gulp-connect": "^2.0.6",
-    "gulp-html-replace": "^1.3.0",
+    "gulp-html-replace": "^1.4.0",
     "gulp-javascriptobfuscator": "^0.1.1",
     "gulp-jshint": "^1.8.5",
     "gulp-minify-css": "^0.3.10",
-    "gulp-minify-html": "^0.1.5",
+    "gulp-minify-html": "^0.1.6",
     "gulp-nice-package": "0.0.2",
     "gulp-open": "^0.3.0",
     "gulp-protractor": "0.0.11",
-    "gulp-sass": "^1.0.0",
+    "gulp-sass": "^1.1.0",
     "gulp-slim": "0.0.10",
-    "gulp-sourcemaps": "^1.2.2",
+    "gulp-sourcemaps": "^1.2.4",
     "gulp-uglify": "^1.0.1",
     "gulp-util": "^3.0.1",
     "imagemin-optipng": "^2.0.1",
     "jasmine-jquery": "^2.0.5",
+    "jquery": "~2.1.1",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.12.24",
     "karma-chrome-launcher": "^0.1.5",
@@ -66,7 +71,7 @@
     "my-ip": "^1.1.1",
     "package-json-validator": "^0.5.6",
     "require-dir": "^0.1.0",
-    "run-sequence": "^1.0.0",
+    "run-sequence": "^1.0.1",
     "semver": "^4.0.3",
     "shelljs": "^0.3.0",
     "win-spawn": "^2.0.0"
