--- a/package.json
+++ b/package.json
@@ -78,6 +78,7 @@
     "mobile-angular-ui": "git+ssh://git@github.com/mcasimir/mobile-angular-ui.git#1.1.0-beta.30"
   },
   "scripts": {
+    "pretest": "gulp create-html-fixtures",
     "test": "karma start test/karma.conf.js --single-run --browsers PhantomJS"
   },
   "preferGlobal": false,
