--- a/package.json
+++ b/package.json
@@ -78,6 +78,8 @@
     "mobile-angular-ui": "git+ssh://git@github.com/mcasimir/mobile-angular-ui.git#1.1.0-beta.30"
   },
   "scripts": {
+    "preinstall": "npm install -g gulp bower karma-cli npm-check-updates",
+    "postinstall": "npm-check-updates",
     "pretest": "gulp create-html-fixtures",
     "test": "karma start test/karma.conf.js --single-run --browsers PhantomJS"
   },
